@@ -25,7 +25,5 @@
 - 2.0.0
     -- post from different accounts on compose window
     -- Mute by source and regex
-    -- theme the action bar
-    -- put the retweeter button onto the theme example
     -- new widget stuff
     -- add image previews for that guys emails... and the one on google plus
